<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.jguida941</groupId>
    <artifactId>cs320-contact-service-junit</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>CS320 Contact Service</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <junit.jupiter.version>5.10.3</junit.jupiter.version>
        <surefire.version>3.5.4</surefire.version>
        <checkstyle.plugin.version>3.6.0</checkstyle.plugin.version>
        <spotbugs.maven.plugin.version>4.7.3.5</spotbugs.maven.plugin.version>
        <jacoco.version>0.8.14</jacoco.version>
        <dependency.check.version>12.1.9</dependency.check.version>
        <dependency.check.skip>false</dependency.check.skip>
        <nvd.api.delay>5000</nvd.api.delay>
        <pitest.version>1.21.1</pitest.version>
        <pit.skip>false</pit.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.27.6</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <useModulePath>false</useModulePath>
                    <parallel>classes</parallel>
                    <useUnlimitedThreads>true</useUnlimitedThreads>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configLocation>config/checkstyle/checkstyle.xml</configLocation>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>INSTRUCTION</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.80</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>${dependency.check.version}</version>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <failBuildOnCVSS>7.0</failBuildOnCVSS>
                    <nvdApiKey>${env.NVD_API_KEY}</nvdApiKey>
                    <nvdApiDelay>8000</nvdApiDelay>
                    <dataDirectory>${project.basedir}/.owasp-cache</dataDirectory>
                    <nvdValidForHours>168</nvdValidForHours>
                    <suppressionFiles>
                        <suppressionFile>config/owasp-suppressions.xml</suppressionFile>
                    </suppressionFiles>
                    <failOnError>false</failOnError>
                    <skip>${dependency.check.skip}</skip>
                    <skipTestScope>false</skipTestScope>
                    <formats>HTML,JSON</formats>
                    <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
                    <nuspecAnalyzerEnabled>false</nuspecAnalyzerEnabled>
                    <nodeAnalyzerEnabled>false</nodeAnalyzerEnabled>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>${pitest.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.pitest</groupId>
                        <artifactId>pitest-junit5-plugin</artifactId>
                        <version>1.2.3</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>mutationCoverage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <targetClasses>
                        <param>contactapp.*</param>
                    </targetClasses>
                    <targetTests>
                        <param>contactapp.*Test</param>
                    </targetTests>
                    <mutationThreshold>70</mutationThreshold>
                    <threads>2</threads>
                    <timeoutFactor>1.5</timeoutFactor>
                    <timestampedReports>false</timestampedReports>
                    <outputFormats>
                        <param>XML</param>
                        <param>HTML</param>
                    </outputFormats>
                    <features>
                        <feature>+CLASSLIMIT(limit[1000])</feature>
                    </features>
                    <skip>${pit.skip}</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
